--- a/calc.html
+++ b/calc.html
@@ -6,9 +6,11 @@
     <script language=javascript type="text/javascript">
 
         var plus;
+        var minus;
 
         function initialize() {
             plus = document.calc.operator.options[0];
+            minus = document.calc.operator.options[1];
         }
 
         function calculate() {
@@ -16,6 +18,9 @@
             b = parseInt(document.calc.val2.value);
             if (plus.selected) {
                 document.calc.answer.value = a + b;
+            }
+            if (minus.selected) {
+                document.calc.answer.value = a - b;
             }
         }
     </script>
@@ -31,7 +36,8 @@
         <input type=text name=val1 size=10>
 
         <select name=operator>
-            <option value=plus>+
+            <option value="plus">+</option>
+            <option value="minus">-</option>
         </select>
 
         <input type=text name=val2 size=10>
