Minus operator added logical error fix

--- a/calc.html
+++ b/calc.html
@@ -19,7 +19,7 @@
             if (plus.selected) {
                 document.calc.answer.value = a + b;
             }
-            if (plus.selected) {
+            if (minus.selected) {
                 document.calc.answer.value = a - b;
             }
         }
