--- a/calc.html
+++ b/calc.html
@@ -5,10 +5,11 @@
 
     <script language=javascript type="text/javascript">
 
-        var plus;
+        var plus,minus;
 
         function initialize() {
             plus = document.calc.operator.options[0];
+			minus = document.calc.operator.options[1];
         }
 
         function calculate() {
@@ -17,6 +18,9 @@
             if (plus.selected) {
                 document.calc.answer.value = a + b;
             }
+			else if(minus.selected){
+			 document.calc.answer.value = a - b;
+			}
         }
     </script>
 </head>
@@ -31,7 +35,8 @@
         <input type=text name=val1 size=10>
 
         <select name=operator>
-            <option value=plus>+
+            <option value=plus>+</option>
+			<option value=minus>-</option>
         </select>
 
         <input type=text name=val2 size=10>
