--- a/calc.html
+++ b/calc.html
@@ -2,28 +2,7 @@
 
 <head>
     <title>Calc</title>
-
-    <script language=javascript type="text/javascript">
-
-        var plus;
-        var minus;
-
-        function initialize() {
-            plus = document.calc.operator.options[0];
-            minus = document.calc.operator.options[1];
-        }
-
-        function calculate() {
-            a = parseInt(document.calc.val1.value);
-            b = parseInt(document.calc.val2.value);
-            if (plus.selected) {
-                document.calc.answer.value = a + b;
-            }
-            if (minus.selected) {
-                document.calc.answer.value = a - b;
-            }
-        }
-    </script>
+    <script src="calc.js"></script>
 </head>
 
 <body onLoad="initialize()">
