--- a/public/calc.html
+++ b/public/calc.html
@@ -12,17 +12,17 @@
     <br>
     Change the operation via the dropdown selection box if desired.
     <form name="calc" action="post">
-        <input type=text name=val1 size=10>
+        <input id="val1" type=text name=val1 size=10>
 
         <select name=operator>
             <option value="plus">+</option>
             <option value="minus">-</option>
         </select>
 
-        <input type=text name=val2 size=10>
+        <input id="val2" type=text name=val2 size=10>
         =
-        <input type=text name=answer size=10>
-        <input type=button value=answer onClick="calculate()">
+        <input  id="answer" type=text name=answer size=10>
+        <input id="calc" type=button value=answer onClick="calculate()">
     </form>
 
     <br><br>
